2003-01-07  Andras Varga

	* implemented ev.flush()

2002-10-20  Andras Varga

	* misc improvements

2002-10-07  Andras Varga

	* main.cc: added call to ExecuteOnStartup::executeAll().
	See new EXECUTE_ON_STARTUP() macro in include/ChangeLog.

2002-10-04  Andras Varga

	* error handling changed from simulation.ok() to exceptions.

2002-09-21  Andras Varga

	* filemgrs.cc, akoutvectormgr.cc: applied Steffen Sroka's patches 
	(thanks Steffen!). AKAROA_CFLAGS added to Makefile.in.

2002-07-08  Andras Varga

	* filemgrs.cc: added fname-append-host=true/false ini file setting.
	When turned on, appends the host name to the names of the output
	files (output vector, output scalar, snapshot files). This is 
	useful when the simulation is run on multiple machines concurrently
	(parallel independent runs (Akaroa) or parallel/distributed simulation),
	and all running instances write to the same directory (e.g. shared
	via NFS mount). [Idea from Steffen Sroka's Akaroa extension]

	* added akoutvectormgr.h/cc: integrated Steffen Sroka's Akaroa 
	extension that supports multiple independent replicated simulation runs.
	Akaroa can be activated by specifying
	  [General]
	  outputvectormanager-class=AkOutputVectorManager
	in the ini file. By default, all output vectors are under Akaroa 
	control; the <modulename>.<vectorname>.akaroa=false setting can be used
	to make Akaroa ignore specific vectors.
	For more info see the Akaroa home page and the OMNeT++ documentation.

	TBD: Akaroa integration into the makefiles; documentation

2002-06-13  Andras Varga

	* filemgrs.cc: 2 bugfixes: (1) output scalar file did not get opened
	sometimes; (2) output scalar file got removed between runs

2002-05-28  Frank Paehlke  <paehlke@tm.uni-karlsruhe.de>

	* filemgrs.cc: Use standard headers and namespaces if
	USE_STD_NAMESPACES is defined

2002-05-16  Ulrich Kaage  <kaage@int.uni-karlsruhe.de>

	* appreg.h (cOmnetAppRegistration): fixed declaration of className()
