@@ -1,3 +1,7 @@
+2003-02-14  Andras Varga
+
+	* inifile.cc: improved handling of lines ~ 1024 chars
+
 2003-01-07  Andras Varga
 
 	* implemented ev.flush()
